--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,5 @@
 
 * Three widgets for Awesome WM
-[2022-10-25 Tue]
-
 ** Sct Widget 
 Set screen color temperature.
 Mouse wheel or mouse button (L/R) clicks to adjust.
@@ -17,6 +15,11 @@ You may turn off the last screen available this way ;)
 Unfinished widget to turn on/off USB disks.
 To /unmount/ and to *poweroff*.
 
+[2023-01-05 Thu]
+- [X] Mount/unmount and detection OK
+- [ ] poweroff should work, but needs to unmount drives first
+- [ ] needs widget refresh after poweroff 
+  
 ** Installation
 #+begin_src lua
 local xrandr 		  	 = require("awesome-wm-widgets.xrandr")
@@ -42,6 +45,6 @@ awful.screen.connect_for_each_screen(function(s)
 	    
 #+end_src
 
-** TODO 
+** TODO TODO
 - [ ] make the widgets frame display up
       when the bar if at the bottom of the screen
